--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,2 +1,2 @@
-<h3>Welcome</h3>
-<p><%= link_to 'Users:', users_path %> <%= User.count %> registered</p>
+<h3><%= t('Welcome')%></h3>
+<p><%= link_to t('Users'), users_path %> <%= User.count %> <%=t('registered')%></p>
